fix layout issue for thinned screens

--- a/www/Content/Css/style.less
+++ b/www/Content/Css/style.less
@@ -21,6 +21,7 @@ label {
     opacity: 0.4;
     .colors(#c8c8c8);
     margin-right:2px;
+    line-height:2em;
 }
 label:hover {
     border: 2px solid black;
